修復：複選框垂直對齐問題

--- a/src/styles/recordings.css
+++ b/src/styles/recordings.css
@@ -289,6 +289,9 @@
   cursor: pointer;
   width: 16px;
   height: 16px;
+  vertical-align: middle;
+  margin: 0;
+  display: inline-block;
 }
 
 /* 播放按鈕 */
